   - ovs-ctl:
     * Added new options --[ovsdb-server|ovs-vswitchd]-umask=MODE to set umask
       value when starting OVS daemons.  E.g., use --ovsdb-server-umask=0002
       in order to create OVSDB sockets with access mode of 0770.
   - QoS:
     * Added new configuration option 'jitter' for a linux-netem QoS type.
     * 'linux-htb' QoS type now supports rates higher than 34 Gbps.
   - DPDK:
     * ovs-vswitchd will keep the CAP_SYS_RAWIO capability when started
       with the --hw-rawio-access command line option.  This allows the
       process extra privileges when mapping physical interconnect memory.
     * New experimental "rx-steering=rss+<protocol>" option to redirect
       certain protocols (for now, only LACP) to a dedicated hardware queue
       using the rte_flow API.
   - SRv6 Tunnel Protocol
     * Added support for userspace datapath (only).
   - Userspace datapath:
     * Connection tracking now supports extraction of SCTP L4 information.
     * Implementation of OpenFlow meters is now lockless allowing for better
       multi-thread scalability.
     * IP and L4 checksum offload support is now enabled by default for
       interfaces that support it.  See the 'status' column in the 'interface'
       table to check the status.
     * 'pmd-maxsleep' other_config was renamed to 'pmd-sleep-max'.
       'pmd-maxsleep' is deprecated and will be removed in a future release.
     * 'ovs-appctl dpif-netdev/pmd-sleep-show' command was added to get the
       max sleep configuration of PMD thread cores.
     * Removed experimental tag from PMD load based sleeping.
   - Linux TC offload:
     * Add support for offloading VXLAN tunnels with the GBP extensions.
   - Python
     * Added async DNS support.
     * Dropped support for Python < 3.6.


v3.1.0 - 16 Feb 2023
--------------------
   - ovs-vswitchd now detects changes in CPU affinity and adjusts the number
     of handler and revalidator threads if necessary.
   - AF_XDP: