@@ -36,6 +36,8 @@ Post-v3.1.0
    - QoS:
      * Added new configuration option 'jitter' for a linux-netem QoS type.
      * 'linux-htb' QoS type now supports rates higher than 34 Gbps.
+   - Ingress Policing:
+     * Ingress policing byte rates can now be configured higher than 34 Gbps.
    - DPDK:
      * ovs-vswitchd will keep the CAP_SYS_RAWIO capability when started
        with the --hw-rawio-access command line option.  This allows the
